--- a/PaperSandbox/pom.xml
+++ b/PaperSandbox/pom.xml
@@ -47,7 +47,7 @@
             <groupId>vahy</groupId>
             <artifactId>master-thesis-reinforcement-learning</artifactId>
             <version>2.0-SNAPSHOT</version>
-            <type>test-jar</type>
+<!--            <type>test-jar</type>-->
             <scope>test</scope>
         </dependency>
     </dependencies>
