--- a/StateSpaceSearch/pom.xml
+++ b/StateSpaceSearch/pom.xml
@@ -26,7 +26,7 @@
             <groupId>vahy</groupId>
             <artifactId>master-thesis-reinforcement-learning</artifactId>
             <version>2.0-SNAPSHOT</version>
-            <type>test-jar</type>
+<!--            <type>test-jar</type>-->
             <scope>test</scope>
         </dependency>
         <dependency>
