--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
                 <executions>
                     <execution>
                         <goals>
-                            <goal>test-jar</goal>
+<!--                            <goal>test-jar</goal>-->
                             <goal>jar</goal>
                         </goals>
                     </execution>
@@ -147,7 +147,7 @@
                     <executions>
                         <execution>
                             <goals>
-                                <goal>test-jar</goal>
+<!--                                <goal>test-jar</goal>-->
                                 <goal>jar</goal>
                             </goals>
                         </execution>
