--- a/PaperSandbox/pom.xml
+++ b/PaperSandbox/pom.xml
@@ -2,6 +2,11 @@
 <project xmlns = "http://maven.apache.org/POM/4.0.0"
          xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>master-thesis-paper-sandbox</artifactId>
+    <packaging>jar</packaging>
+    <version>2.0-SNAPSHOT</version>
 
     <parent>
         <groupId>vahy</groupId>
@@ -10,16 +15,10 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>master-thesis-paper-sandbox</artifactId>
-    <packaging>jar</packaging>
-
-
     <properties>
 <!--        <dl4j.version>1.0.0-beta2</dl4j.version>-->
 <!--        <nd4j.version>1.0.0-beta2</nd4j.version>-->
-        <jama.version>1.0.3</jama.version>
+<!--        <jama.version>1.0.3</jama.version>-->
         <CLP.version>1.16.11</CLP.version>
     </properties>
 
@@ -37,11 +36,12 @@
             <artifactId>master-thesis-state-space-search</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
-            <groupId>vahy</groupId>
-            <artifactId>master-thesis-reinforcement-learning</artifactId>
-            <version>2.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
