--- a/pom.xml
+++ b/pom.xml
@@ -132,9 +132,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.0</version>
                     <configuration>
-                        <argLine>
-                            --illegal-access=permit -XX:+UseParallelGC
-                        </argLine>
+                        <argLine>--illegal-access=permit -XX:+UseParallelGC -server</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
