--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -7,12 +7,12 @@
 
     <artifactId>master-thesis-commons</artifactId>
     <packaging>jar</packaging>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0</version>
 
     <parent>
         <groupId>vahy</groupId>
         <artifactId>master-thesis</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
