--- a/StateSpaceSearch/pom.xml
+++ b/StateSpaceSearch/pom.xml
@@ -6,12 +6,12 @@
 
     <artifactId>master-thesis-state-space-search</artifactId>
     <packaging>jar</packaging>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0</version>
 
     <parent>
         <artifactId>master-thesis</artifactId>
         <groupId>vahy</groupId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>vahy</groupId>
             <artifactId>master-thesis-reinforcement-learning</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>guru.nidi</groupId>
